--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
     "mui-chips-input": "^2.1.4",
+    "npm-check-updates": "^16.14.20",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-file-base64": "^1.0.3",
