--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "react-file-base64": "^1.0.3",
     "react-google-login": "^5.2.2",
     "react-redux": "^9.1.0",
+    "react-responsive": "^10.0.0",
     "react-router-dom": "^6.21.3",
     "react-scripts": "5.0.1",
     "redux": "^5.0.1",
